--- a/app/views/base/main.scala.html
+++ b/app/views/base/main.scala.html
@@ -1,3 +1,6 @@
+@import utils.BuildInfo
+@import play.api.Play
+@import play.api.Play.current
 @(flash: Flash, title: String, scripts: Html)(content: Html)(implicit m: Messages)
 
 <!DOCTYPE html>
@@ -9,22 +12,38 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap.min.css")">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap-theme.min.css")">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/font-awesome.min.css")">
+	<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/font-awesome.min.css")">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/animate.min.css")">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
+
 
 	<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 	<script src="@routes.Assets.at("js/jquery-1.11.3.min.js")" type="text/javascript"></script>
 	<script src="@routes.Assets.at("js/jquery-migrate-1.2.1.min.js")" type="text/javascript"></script>
 	<script src="@routes.Assets.at("js/bootstrap.min.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("js/application.js")" type="text/javascript"></script>
 </head>
 <body>
-	@content
 	<div>
 		@for(message <- flash.get("error"))   { <p class="notify hidden danger">@m(message)</p> }
 		@for(message <- flash.get("success")) { <p class="notify hidden success">@m(message)</p> }
 	</div>
-	<script src="@routes.Assets.at("js/application.js")" type="text/javascript"></script>
+
+    @content
+
+    @if(Play.isProd) {
+        <script src="@routes.Assets.at("js/application-all.min.js")" type="text/javascript"></script>
+    } else {
+        <script src="@routes.Assets.at("js/application-all.js")" type="text/javascript"></script>
+    }
+
 	@scripts
+
+    <footer class="footer">
+        <div class="container-fluid">
+            <b>@m("title.application")</b>
+            <span>@m("app.version", BuildInfo.version, views.support.ViewSupport.formatDateTimeOrDefault(BuildInfo.builtAtMillis, "")) @Html(m("app.copyright"))</span>
+        </div>
+    </footer>
 </body>
 </html>
